<resources>
    <string name="app_name">LetsCook</string>
    <string name="action_settings">Settings</string>
    <string name="open_drawer">open drawer</string>
    <string name="close_drawer">close drawer</string>
    <string name="nav_logout">Logout</string>

    <!-- Fragment tags -->
    <string name="fragment_add_recipe">FragmentAddRecipe</string>
    <string name="fragment_recipes">FragmentRecipes</string>
    <string name="fragment_recipes_detail">FragmentRecipesDetail</string>
    <string name="fragment_favourites">FragmentFavourites</string>
    <string name="fragment_other_chefs">FragmentOtherChefs</string>
    <string name="fragment_events">FragmentEvents</string>
    <string name="dialog_add_recipe">DialogFragmentRecipeTitle</string>
    <string name="dialog_add_ingredient">DialogFragmentAddIngredient</string>
    <string name="fragment_add_event">FragmentManager</string>
    <string name="fragment_custom_recipes">FragmentCustomRecipes</string>
    <string name="fragment_custom_recipe_detail">FragmentCustomRecipeDetail</string>
    <string name="fragment_home">FragmentHome</string>


    <string name="et_hint_recipe_title">Recipe Title</string>
    <!--<string name="dialog_add_recipe_title">Add a title for the recipe</string>-->

    <!--<string name="spinner_category">Choose Category</string>-->
    <string name="spinner_level">Choose Level</string>
    <string name="spinner_dinner_guest">Number of Guest</string>
    <string name="spinner_time">Choose Time</string>
    <string name="spinner_budget">Choose Budget</string>


    <string name="dialog_ok">OK</string>
    <string name="dialog_cancel">Cancel</string>
    <string name="tv_add_image">Add image</string>
    <string name="tv_add_ingredients">Ingredient</string>
    <string name="et_hint_ingredient_name">Ingredient</string>
    <string name="et_hint_ingredient_amount">Amount</string>
    <string name="dialog_add">Add</string>
    <string name="tv_add_ingredients_amount">Amount</string>
    <string name="menu_camera">Take Picture</string>
    <string name="fragment_nutrients">FragmentNutrients</string>
    <string name="fragment_add_recipe_title">New Recipe</string>
    <string name="fragment_categories_title">Categories</string>
    <string name="fragment_nutrients_title">Nutrients</string>
    <string name="recipes_of_the_day">Recipes of the Day</string>
    <string name="fragment_recipes_viewer">FragmentRecipesViewer</string>
    <string name="fragment_suggestions">FragmentSuggestions</string>


    <!-- Google Sign In-->
    <string name="desc_google_icon">Google Logo</string>
    <string name="google_sign_in">Sign Up with Google</string>
    <string name="signed_out">Signed out</string>
    <string name="sign_out">Sign Out</string>
    <string name="disconnect">Disconnect</string>
    <!--Google Api key-->
    <string name="google_key">AIzaSyDSO9Az-CcMYbSnqzRN8Cb3aw-no7skl68</string>
    <!-- Facebook sign in-->
    <string name="facebook_app_id">980220225405108</string>
    <!-- Sign-in status messages -->
    <string name="signed_in_fmt">Signed in as: %s</string>
    <string name="auth_code_fmt">Auth Code: %s</string>
    <string name="loading">Loading…</string>
    <string name="login">Login</string>
    <string name="server_client_id">604841599359-1sbc1hn16c1i7csrrgntjh03lv6g7r6a.apps.googleusercontent.com</string>
    <string name="server_client_secret">10DDoxMWSpU43gVkzFX5oh6p</string>
    <string name="facebook_sign_in">Sign Up with Facebook</string>
    <string name="facebook_id">id</string>
    <string name="facebook_name">name</string>
    <string name="facebook_email">email</string>
    <string name="facebook_picture">picture</string>
    <string name="et_hint_event_title">Event title</string>
    <string name="et_hint_event_address">Address</string>
    <string name="event_enter_address">Please enter an address</string>
    <string name="add_recipe_category">Category</string>
    <string name="add_event_title">Add Event</string>
    <string name="add_event_date">Date</string>
    <string name="add_event_select_date">Select a date</string>
    <string name="add_event_create">Create event</string>
    <string name="add_recipe_create">Create Recipe</string>
    <string name="home">DummyFragment with PayPal!!</string>
    <string name="recipe_detail">Nutrients</string>
    <string name="recipes_pager_viewer_header">Hungry? \n Check a recipe and lets cook!!</string>
    <string name="fragment_header">FragmentHeader</string>

</resources>
