<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                xmlns:fab="http://schemas.android.com/apk/res-auto"
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="match_parent">
    <TextView
        android:id="@+id/tv_event_user_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/add_event_title"
        android:textSize="20sp"
        android:gravity="center"/>
    <android.support.design.widget.TextInputLayout
        android:id="@+id/input_layout_event_title"
        android:layout_below="@id/tv_event_user_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <EditText
            android:id="@+id/et_event_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:singleLine="true"
            android:inputType="textPersonName"
            android:hint="@string/et_hint_event_title" />
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/input_layout_event_address"
        android:layout_below="@id/input_layout_event_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <EditText
            android:id="@+id/et_event_address"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:singleLine="true"
            android:inputType="textPersonName"
            android:hint="@string/et_hint_event_address" />
    </android.support.design.widget.TextInputLayout>

    <LinearLayout
        android:id="@+id/layout_event_date"
        android:layout_below="@id/input_layout_event_address"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:orientation="horizontal">
        <Button
            android:id="@+id/btn_event_date"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/colorPrimaryDark"
            android:text="@string/add_event_date"/>
        <TextView
            android:id="@+id/tv_event_date"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/add_event_select_date"/>
    </LinearLayout>

    <fragment xmlns:android="http://schemas.android.com/apk/res/android"
              android:id="@+id/map"
              android:layout_below="@id/layout_event_date"
              android:name="com.google.android.gms.maps.SupportMapFragment"
              xmlns:map="http://schemas.android.com/apk/res-auto"
              xmlns:tools="http://schemas.android.com/tools"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:layout_above="@+id/btn_event_add"
              tools:context="com.tae.mapsdemo.MapsActivity"/>

    <Button
        android:id="@+id/btn_event_add"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:textColor="@color/colorPrimaryDark"
        android:text="@string/add_event_create"/>

    <android.support.design.widget.FloatingActionButton
        android:id="@+id/fab_event_show_map"
        android:layout_alignTop="@id/map"
        android:layout_alignParentStart="true"
        android:layout_margin="@dimen/activity_horizontal_margin"
        android:layout_width="wrap_content"
        fab:fabSize="mini"
        android:src="@android:drawable/ic_menu_view"
        android:layout_height="wrap_content"/>
</RelativeLayout>